Fix Header, Boxes, Footer spacing & alignment
header.html, intro.html
  Add conditional check for homepage vs normal page subheader bar
	Move cwl-announcenement div from intro.html to header.html

_header.scss - fix site logo sizing & alignment

_intro.scss - add box shadows to "feature" boxes

_footer.scss - add fix for "footer doesn't reach bottom of page, when content too short"

_navigation.yml - add Home link

Replace svg logo with png logo

--- a/content/_sass/partials/_header.scss
+++ b/content/_sass/partials/_header.scss
@@ -1,12 +1,34 @@
-@include media-breakpoint-up(md) {
+.site-header-logo {
+  align-items: center;
+  display: flex;
+  height: auto;
+  justify-content: center;
+  overflow: hidden;
+
+  img {
+    margin: 1rem auto;
+    max-width: 100%;
+    width: auto;
+  }
+}
+
+@include media-breakpoint-up(sm) {
   .site-header-logo {
-    align-items: center;
-    display: flex;
-    height: 300px;
-    overflow: hidden;
+    justify-content: center;
 
     img {
-      height: 360px;
+      max-width: 80%;
+    }
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .site-header-logo {
+    height: auto;
+
+    img {
+      height: 260px;
+      max-width: initial;
     }
   }
 }
@@ -14,5 +36,9 @@
 @include media-breakpoint-up(lg) {
   .site-header-logo {
     justify-content: center;
+
+    img {
+      height: 300px;
+    }
   }
 }
